--- a/Game.css
+++ b/Game.css
@@ -95,7 +95,7 @@ h1{
 	width: 500px;
 	height: 200px;
 	border: 1px solid lightblue;
-	background-image: url('images/hospital_background.PNG');
+	background-image: url('images/hospital_background.png');
 	background-color: white;
 	position: relative;
 	box-shadow:  0 0 20px #00d2ff, 0 0 30px #00d2ff, 0 0 40px #00d2ff, 0 0 50px #00d2ff, 0 0 60px #00d2ff, 0 0 70px #00d2ff;
